Prefix SCSS constructs with nds-
Add nds- to the names of all:
- functions
- mixins
- variables
- palceholders

--- a/packages/design-system/scss/helpers/_helpers-glyphs.scss
+++ b/packages/design-system/scss/helpers/_helpers-glyphs.scss
@@ -2,12 +2,12 @@
 /// @group helpers
 ////
 
-@if $nice-output-glyph-classes {
+@if $nds-output-glyph-classes {
   /// Output a BEM style glyph selector for each glyph in the map.
   /// E.g. .glyph.glyph--bullet { content: '\2022'; }
   /// @since 0.1.0
   .glyph {
-    @each $key, $value in $nice-glyphs {
+    @each $key, $value in $nds-glyphs {
       &--#{$key} {
         &:before {
           content: unquote("'\\#{$value}'");
