--- a/packages/design-system/scss/helpers/_helpers-spacing.scss
+++ b/packages/design-system/scss/helpers/_helpers-spacing.scss
@@ -43,13 +43,13 @@
 // A map of spacing value
 $_spacings: (
   0: 0,
-  a: $spacing-xx-small,
-  b: $spacing-x-small,
-  c: $spacing-small,
-  d: $spacing-medium,
-  e: $spacing-large,
-  f: $spacing-x-large,
-  g: $spacing-xx-large
+  a: $nds-spacing-xx-small,
+  b: $nds-spacing-x-small,
+  c: $nds-spacing-small,
+  d: $nds-spacing-medium,
+  e: $nds-spacing-large,
+  f: $nds-spacing-x-large,
+  g: $nds-spacing-xx-large
 );
 
 // Map of property abbreviations to name
