--- a/packages/nds-core/__stories__/grid.stories.scss
+++ b/packages/nds-core/__stories__/grid.stories.scss
@@ -1,8 +1,8 @@
 @import '../scss/core.scss';
 
 .grid-example-item {
-  background: $colour-nice-grey-3;
-  border: 0.25em solid $colour-nice-grey-1;
+  background: $nds-colour-nice-grey-3;
+  border: 0.25em solid $nds-colour-nice-grey-1;
   margin-bottom: 0.5em;
   padding: 0.5em;
   text-align: center;
