--- a/packages/nds-core/scss/helpers/_helpers-utils.scss
+++ b/packages/nds-core/scss/helpers/_helpers-utils.scss
@@ -6,26 +6,26 @@
 /// @param {Number} $num The number whose units you wish to strip.
 /// @since 0.2.0
 /// @link https://davidtheclark.github.io/scut/strip-unit.html
-@function strip-unit($num) {
+@function nds-strip-unit($num) {
   @return $num / ($num * 0 + 1);
 }
 
 /// Convert pixel-values to em-values.
 /// @param {Number} $pixels - The px-value you wish to convert to ems. No px unit necessary (e.g. 20 is fine, so is 20px). Passing a list will result in a list of em values (see examples).
-/// @param {Number} $base [$nice-base-font-size] - A base-value with which to calculate the em-value
+/// @param {Number} $base [$nds-base-font-size] - A base-value with which to calculate the em-value
 /// @since 0.2.0
 /// @link https://davidtheclark.github.io/scut/em.html
-@function em($pixels, $base: $nice-base-font-size) {
+@function em($pixels, $base: $nds-base-font-size) {
   // $base could be in em or px (no unit = px).
   // Adjust accordingly to create a $divisor that
   // serves as context for $pixels.
   $multiplier: if(unit($base) == em, 16, 1);
-  $divisor: strip-unit($base) * $multiplier;
+  $divisor: nds-strip-unit($base) * $multiplier;
 
   $em-vals: ();
 
   @each $val in $pixels {
-    $val-in-ems: (strip-unit($val) / $divisor) * 1em;
+    $val-in-ems: (nds-strip-unit($val) / $divisor) * 1em;
     $em-vals: append($em-vals, $val-in-ems);
   }
 
@@ -40,13 +40,13 @@
 
 /// Convert pixel-values to rem-values.
 /// @param {Number} $pixels - The px-value you wish to convert to rems. No px unit necessary (e.g. 20 is fine, so is 20px). Passing a list will result in a list of rem values (see examples).
-/// @param {Number} $base [$nice-base-font-size] - A base-value with which to calculate the em-value
+/// @param {Number} $base [$nds-base-font-size] - A base-value with which to calculate the em-value
 /// @since 0.2.0
 /// @link https://davidtheclark.github.io/scut/rem.html
-@function rem($pixels, $base: $nice-base-font-size) {
+@function rem($pixels, $base: $nds-base-font-size) {
   $rem-vals: ();
   @each $val in $pixels {
-    $val-in-rems: strip-unit($val) / $base * 1rem;
+    $val-in-rems: nds-strip-unit($val) / $base * 1rem;
     $rem-vals: append($rem-vals, $val-in-rems);
   }
 
@@ -65,7 +65,15 @@
 /// @author Hugo Giraudel
 /// @param {String} $element-selector - Element selector
 /// @since 0.5.0;
-@mixin when-is($element-selector) {
+/// @example
+///   .something {
+///     color: red;
+
+///     @include nds-when-is(a) {
+///       color: blue;
+///     }
+///   }
+@mixin nds-when-is($element-selector) {
   @at-root #{$element-selector + &} {
     @content;
   }
