--- a/packages/nds-filters/scss/filter-panel.scss
+++ b/packages/nds-filters/scss/filter-panel.scss
@@ -6,34 +6,34 @@
 @import '~@nice-digital/icons/scss/nice-icons';
 
 .filter-panel {
-  margin: rem(0 0 $spacing-medium 0);
+  margin: rem(0 0 $nds-spacing-medium 0);
 
   // Heading can be one of:
   // - heading for server side rendering for non-js
   // - button to collapse/expand filter panel client side
   &__heading {
-    @include font-size(h5);
-    background: $colour-nice-grey-2;
+    @include nds-font-size(h5);
+    background: $nds-colour-nice-grey-2;
     border: 0;
     display: block;
     font-weight: bold;
     margin: 0;
-    padding: rem($spacing-small);
+    padding: rem($nds-spacing-small);
     position: relative;
     text-align: left;
     width: 100%;
 
-    @include when-is(button) {
+    @include nds-when-is(button) {
       appearance: none;
       cursor: pointer;
 
       &:after {
         @include nice-icon(chevron-up);
-        @include font-size(-1);
-        color: $colour-icons;
-        margin-top: -rem($spacing-small);
+        @include nds-font-size(-1);
+        color: $nds-colour-icons;
+        margin-top: -rem($nds-spacing-small);
         position: absolute;
-        right: rem($spacing-small);
+        right: rem($nds-spacing-small);
         top: 50%;
       }
 
@@ -42,14 +42,14 @@
       }
 
       &:focus {
-        @include default-focus-style;
+        @include nds-default-focus-style;
       }
     }
   }
 
   &__body {
-    background: $colour-panel-default;
-    padding: rem($spacing-medium);
+    background: $nds-colour-panel-default;
+    padding: rem($nds-spacing-medium);
 
     &[aria-hidden='true'] {
       display: none;
@@ -57,16 +57,16 @@
   }
 
   &__submit {
-    margin: rem($spacing-medium 0 0);
+    margin: rem($nds-spacing-medium 0 0);
   }
 
   @include mq($from: sm) {
     &__heading {
       background: none;
-      margin-bottom: rem($spacing-medium);
+      margin-bottom: rem($nds-spacing-medium);
       padding: 0;
 
-      @include when-is(button) {
+      @include nds-when-is(button) {
         &:after {
           display: none;
         }
