--- a/packages/design-system/scss/typography/_typography-global.scss
+++ b/packages/design-system/scss/typography/_typography-global.scss
@@ -9,7 +9,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: rem($nice-root-font-size-min);
+  font-size: rem($nds-root-font-size-min);
   overflow-x: hidden;
 
   // See https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
@@ -19,41 +19,41 @@ html {
     box-sizing: inherit;
   }
 
-  @include mq($from: $nice-root-font-size-min-breakpoint) {
-    // stylelint-disable-block function-calc-no-unspaced-operator
+  @include mq($from: $nds-root-font-size-min-breakpoint) {
+    // stylelint-disable function-calc-no-unspaced-operator
     // Fallback halfway between max and min for older browsers that don't support calc
     font-size: rem(
-      $nice-root-font-size-min +
-        ($nice-root-font-size-max - $nice-root-font-size-min) / 2
+      $nds-root-font-size-min +
+        ($nds-root-font-size-max - $nds-root-font-size-min) / 2
     );
     // Follows "fluid typography" rules: https://www.google.co.uk/search?q=fluid%20typography%20vw
     // ie scales font-size linearly between 2 breakpoints.
     // Also uses rems so that they're relative to browser font size.
     // In form: MIN_FONT_SIZE + (MAX_FONT_SIZE - MIN_FONT_SIZE) * (100vw - MIN_SCREEN_SIZE) / (MAX_SCREEN_SIZE - MIN_SCREEN_SIZE)
     font-size: calc(
-      #{rem($nice-root-font-size-min)} + #{strip-unit(
-          rem($nice-root-font-size-max) - rem($nice-root-font-size-min)
+      #{rem($nds-root-font-size-min)} + #{nds-strip-unit(
+          rem($nds-root-font-size-max) - rem($nds-root-font-size-min)
         )} *
         (
-          (100vw - #{rem($nice-root-font-size-min-breakpoint)}) / #{strip-unit(
-              rem($nice-root-font-size-max-breakpoint) -
-                rem($nice-root-font-size-min-breakpoint)
+          (100vw - #{rem($nds-root-font-size-min-breakpoint)}) / #{nds-strip-unit(
+              rem($nds-root-font-size-max-breakpoint) -
+                rem($nds-root-font-size-min-breakpoint)
             )}
         )
     );
   }
 
-  @include mq($from: $nice-root-font-size-max-breakpoint) {
-    font-size: rem($nice-root-font-size-max);
+  @include mq($from: $nds-root-font-size-max-breakpoint) {
+    font-size: rem($nds-root-font-size-max);
   }
 }
 
 body {
-  background: $colour-body;
-  color: $colour-text;
-  font-family: font-family(sans);
+  background: $nds-colour-body;
+  color: $nds-colour-text;
+  font-family: nds-get-font-family(sans);
   font-style: normal;
-  line-height: rem($nice-base-line-height);
+  line-height: rem($nds-base-line-height);
   overflow-x: hidden;
   text-rendering: optimizelegibility;
 }
@@ -65,29 +65,29 @@ img {
 hr {
   background: 0;
   border: 0;
-  border-top: em(1px) solid $colour-border;
-  margin: em($spacing-large 0);
+  border-top: em(1px) solid $nds-colour-border;
+  margin: em($nds-spacing-large 0);
   padding: 0;
 }
 
 p,
 .p {
-  @include p;
+  @include nds-p;
 }
 
 .lead {
-  @include lead;
+  @include nds-lead;
 }
 
 code {
-  background: $colour-nice-grey-3;
-  border: 1px solid $colour-border;
-  border-radius: em($spacing-xx-small);
-  color: $colour-text;
+  background: $nds-colour-nice-grey-3;
+  border: 1px solid $nds-colour-border;
+  border-radius: em($nds-spacing-xx-small);
+  color: $nds-colour-text;
   display: inline-block;
-  font-family: font-family(mono);
-  margin: em(0 0 $spacing-xx-small);
-  padding: em(0 $spacing-x-small);
+  font-family: nds-get-font-family(mono);
+  margin: em(0 0 $nds-spacing-xx-small);
+  padding: em(0 $nds-spacing-x-small);
 
   pre & {
     background: transparent;
@@ -100,7 +100,7 @@ code {
 mark,
 .mark {
   background-color: #fff999;
-  padding: em(0 $spacing-x-small);
+  padding: em(0 $nds-spacing-x-small);
 }
 
 /// Small
