--- a/packages/design-system/scss/typography/_typography-lists.scss
+++ b/packages/design-system/scss/typography/_typography-lists.scss
@@ -4,7 +4,7 @@
 
 ul,
 ol {
-  @extend %list;
+  @extend %nds-list;
 }
 
 /// Base list class. Can be used with various modifiers.
@@ -12,7 +12,7 @@ ol {
 /// @see .list--loose
 /// @since 0.1.0
 .list {
-  @extend %list;
+  @extend %nds-list;
 }
 
 /// Unstyled list modifier - remove bullets, padding etc.
@@ -31,7 +31,7 @@ ol {
 .list--loose {
   li,
   .list__item {
-    margin-bottom: rem($spacing-x-small);
+    margin-bottom: rem($nds-spacing-x-small);
   }
 }
 
@@ -48,14 +48,14 @@ ol {
     margin-right: -rem(4);
 
     a {
-      padding: rem($spacing-small);
+      padding: rem($nds-spacing-small);
     }
 
     &:after {
-      border-left: 1px solid $colour-icons;
-      content: get-glyph(zero-width-space);
+      border-left: 1px solid $nds-colour-icons;
+      content: nds-get-glyph(zero-width-space);
       display: inline-block;
-      margin: em(0 $spacing-small);
+      margin: em(0 $nds-spacing-small);
       overflow: hidden;
       text-indent: -99px;
       vertical-align: middle;
