--- a/packages/nds-core/scss/helpers/_helpers-clearfix.scss
+++ b/packages/nds-core/scss/helpers/_helpers-clearfix.scss
@@ -4,7 +4,7 @@
 
 /// Make an element adapt its height to fit floated children, and clear floats in both directions.
 /// @since 0.1.0
-@mixin clearfix {
+@mixin nds-clearfix {
   &:before,
   &:after {
     content: ' ';
@@ -18,6 +18,6 @@
 
 /// Placeholder for clearfix
 /// @since 0.1.0
-%clearfix {
-  @include clearfix;
+%nds-clearfix {
+  @include nds-clearfix;
 }
