--- a/packages/nds-core/scss/helpers/_helpers-focus.scss
+++ b/packages/nds-core/scss/helpers/_helpers-focus.scss
@@ -6,13 +6,13 @@
 /// @param {Boolean} $rounded whether to use box shadow for border (outline can't be styled to have radius corners)
 /// @output the default focus styles ie background colour and outline
 /// @since 0.1.0
-@mixin default-focus-style($rounded: false) {
+@mixin nds-default-focus-style($rounded: false) {
   @if $rounded {
-    box-shadow: 0 0 0 rem($spacing-x-small) $colour-focus;
-    outline: $spacing-x-small solid transparent;
-    outline-offset: $spacing-x-small;
+    box-shadow: 0 0 0 rem($nds-spacing-x-small) $nds-colour-focus;
+    outline: $nds-spacing-x-small solid transparent;
+    outline-offset: $nds-spacing-x-small;
   } @else {
-    outline: rem($spacing-x-small) solid $colour-focus;
+    outline: rem($nds-spacing-x-small) solid $nds-colour-focus;
   }
 }
 
@@ -20,6 +20,6 @@
 /// on an inverse (dark) background
 /// @output the inverse focus styles ie background colour and outline
 /// @since 0.3.1
-@mixin inverse-focus-style {
-  outline: rem($spacing-x-small) solid $colour-focus-inverse;
+@mixin nds-inverse-focus-style {
+  outline: rem($nds-spacing-x-small) solid $nds-colour-focus-inverse;
 }
