--- a/packages/nds-core/scss/helpers/_helpers-visibility.scss
+++ b/packages/nds-core/scss/helpers/_helpers-visibility.scss
@@ -5,21 +5,21 @@
 //## Mixins
 
 /// Portrait media query
-@mixin portrait {
+@mixin nds-portrait {
   @media screen and (orientation: portrait) {
     @content;
   }
 }
 
 /// Landscape media query
-@mixin landscape {
+@mixin nds-landscape {
   @media screen and (orientation: landscape) {
     @content;
   }
 }
 
 /// Makes an element visually hidden, but still accessible to keyboards and assistive devices.
-@mixin invisible {
+@mixin nds-invisible {
   clip: rect(0, 0, 0, 0);
   height: 1px;
   overflow: hidden;
@@ -28,7 +28,7 @@
 }
 
 /// Reverses the CSS output created by the `invisible()` mixin.
-@mixin invisible-off {
+@mixin nds-invisible-off {
   clip: auto;
   height: auto;
   overflow: visible;
