--- a/packages/nds-core/scss/layout/_layout-grid-helpers.scss
+++ b/packages/nds-core/scss/layout/_layout-grid-helpers.scss
@@ -19,16 +19,16 @@
 /// @require {mixin} grid-debug
 /// @example scss SCSS usage
 ///   .test {
-///     @include grid($compact: true);
+///     @include nds-grid($compact: true);
 ///
-///     @include element('item') {
-///       @include grid-item;
+///     @include nds-element('item') {
+///       @include nds-grid-item;
 ///       background: red;
 ///       width: 100%;
 ///     }
 ///
 ///     @include mq($from: md) {
-///       @include element('item') {
+///       @include nds-element('item') {
 ///         background: green;
 ///         width: percentage(3 / 12);
 ///       }
@@ -39,7 +39,7 @@
 ///     <div class="test__item">item</div>
 ///   </div>
 /// @since 0.1.0
-@mixin grid(
+@mixin nds-grid(
   $reverse: false,
   $gutterless: false,
   $compact: false,
@@ -51,42 +51,42 @@
   letter-spacing: -0.31em; // Remove whitespace caused by `inline-block` elements
   list-style: none; // Allow the grid system to be used on lists.
   margin: 0; // Remove any margins that might affect the grid system.
-  margin-left: -$nice-grid-gutter; // Apply a negative `margin-left` to negate the columns’ gutters.
+  margin-left: -$nds-grid-gutter; // Apply a negative `margin-left` to negate the columns’ gutters.
   padding: 0; // Remove any paddings that might affect the grid system.
 
   @if $reverse {
-    @include grid-reverse;
+    @include nds-grid-reverse;
   }
 
   @if $gutterless {
-    @include grid-gutterless;
+    @include nds-grid-gutterless;
   }
 
   @if $compact {
-    @include grid-compact;
+    @include nds-grid-compact;
   }
 
   @if $loose {
-    @include grid-loose;
+    @include nds-grid-loose;
   }
 
   @if $right {
-    @include grid-right;
+    @include nds-grid-right;
   }
 
   @if $center {
-    @include grid-center;
+    @include nds-grid-center;
   }
 
   @if $debug {
-    @include grid-debug;
+    @include nds-grid-debug;
   }
 }
 
 /// Reversed grids allow you to structure your source in the opposite order to how
 /// your rendered layout will appear
 /// @since 0.1.0
-@mixin grid-reverse {
+@mixin nds-grid-reverse {
   direction: rtl;
   text-align: left;
 }
@@ -94,40 +94,40 @@
 /// Gutterless grids have all the properties of regular grids, minus any spacing
 /// @see grid-item-gutterless
 /// @since 0.1.0
-@mixin grid-gutterless {
+@mixin nds-grid-gutterless {
   margin-left: 0;
 }
 
 /// Compact grids have a smaller gutter
 /// @see grid-item-compact
 /// @since 0.2.10
-@mixin grid-compact {
-  margin-left: -$nice-grid-gutter-compact;
+@mixin nds-grid-compact {
+  margin-left: -$nds-grid-gutter-compact;
 }
 
 /// Loose grids have a larger gutter
 /// @see grid-item-compact
 /// @since 0.2.10
-@mixin grid-loose {
-  margin-left: -$nice-grid-gutter-loose;
+@mixin nds-grid-loose {
+  margin-left: -$nds-grid-gutter-loose;
 }
 
 /// Align the entire grid to the right
 /// @since 0.1.0
-@mixin grid-right {
+@mixin nds-grid-right {
   text-align: right;
 }
 
 /// Centered grids align grid items centrally without needing to use push or pull classes
 /// @since 0.1.0
-@mixin grid-center {
+@mixin nds-grid-center {
   text-align: center;
 }
 
 /// Debug a grid by putting a highlight round it
 /// @see grid-item-debug
 /// @since 0.1.0
-@mixin grid-debug {
+@mixin nds-grid-debug {
   outline: 4px dashed red;
 }
 
@@ -179,10 +179,10 @@
 /// @require {mixin} grid-item-debug
 /// @example scss
 ///   .test {
-///     @include grid-item(12, $md: 8, $lg: (cols: 7, push: 1), $loose: true);
+///     @include nds-grid-item(12, $md: 8, $lg: (cols: 7, push: 1), $loose: true);
 ///   }
 /// @since 0.1.0
-@mixin grid-item(
+@mixin nds-grid-item(
   $columns: 12,
   $push: false,
   $pull: false,
@@ -207,7 +207,7 @@
   direction: ltr;
   display: inline-block;
   letter-spacing: normal;
-  padding-left: $nice-grid-gutter;
+  padding-left: $nds-grid-gutter;
   position: relative;
   text-align: left;
   vertical-align: top;
@@ -223,59 +223,59 @@
   }
 
   @if $gutterless {
-    @include grid-item-gutterless;
+    @include nds-grid-item-gutterless;
   }
 
   @if $compact {
-    @include grid-item-compact;
+    @include nds-grid-item-compact;
   }
 
   @if $loose {
-    @include grid-item-loose;
+    @include nds-grid-item-loose;
   }
 
   @if $middle {
-    @include grid-item-middle;
+    @include nds-grid-item-middle;
   }
 
   @if $bottom {
-    @include grid-item-bottom;
+    @include nds-grid-item-bottom;
   }
 }
 
 /// Gutterless grids have all the properties of regular grids, minus any spacing.
 /// @since 0.1.0
-@mixin grid-item-gutterless {
+@mixin nds-grid-item-gutterless {
   padding-left: 0;
 }
 
 /// Compact grid item with a smaller gutter
 /// @since 0.2.10
-@mixin grid-item-compact {
-  padding-left: $nice-grid-gutter-compact;
+@mixin nds-grid-item-compact {
+  padding-left: $nds-grid-gutter-compact;
 }
 
 /// Loose grid item with a larger gutter
 /// @since 0.2.10
-@mixin grid-item-loose {
-  padding-left: $nice-grid-gutter-loose;
+@mixin nds-grid-item-loose {
+  padding-left: $nds-grid-gutter-loose;
 }
 
 /// Align grid cell vertically to the middle
 /// @since 0.1.0
-@mixin grid-item-middle {
+@mixin nds-grid-item-middle {
   vertical-align: middle;
 }
 
 /// Align grid cell vertically to the bottom
 /// @since 0.1.0
-@mixin grid-item-bottom {
+@mixin nds-grid-item-bottom {
   vertical-align: bottom;
 }
 
 /// Debug a grid item by putting a highlight round it
 /// @see grid-debug
 /// @since 0.1.0
-@mixin grid-item-debug {
+@mixin nds-grid-item-debug {
   outline: 2px dashed blue;
 }
