--- a/packages/nds-core/scss/settings/_settings-colours-nice.scss
+++ b/packages/nds-core/scss/settings/_settings-colours-nice.scss
@@ -6,16 +6,16 @@
 
 /// NICE Black. Part of the primary palette.
 /// @since 0.2.0
-$colour-nice-black: #222;
+$nds-colour-nice-black: #222;
 
 /// NICE White. Part of the primary palette
 /// @since 0.2.0
-$colour-nice-white: #fff;
+$nds-colour-nice-white: #fff;
 
 /// NICE Teal. Part of the primary palette.
 /// First choice of colour for supporting
 /// @since 0.2.0
-$colour-nice-teal: #004650;
+$nds-colour-nice-teal: #004650;
 
 // SECONDARY PALETTE
 
@@ -23,58 +23,58 @@ $colour-nice-teal: #004650;
 /// panel background to highlight a particular section of content,
 /// in which case font colour must be pure white (NICE White) to make text legible.
 /// @since 0.2.0
-$colour-nice-purple: #451551;
+$nds-colour-nice-purple: #451551;
 
 /// Cool Teal. Part of the secondary palette.
 /// @since 0.2.0
-$colour-nice-cool-teal: #00506a;
+$nds-colour-nice-cool-teal: #00506a;
 
 /// Rich Black. Part of the secondary palette.
 /// @since 0.2.0
-$colour-nice-rich-black: #0e0e0e;
+$nds-colour-nice-rich-black: #0e0e0e;
 
 /// Dark Grey. Part of the secondary palette.
 /// @since 0.2.0
-$colour-nice-dark-grey: #393939;
+$nds-colour-nice-dark-grey: #393939;
 
 /// Grey 1. Part of the secondary palette.
 /// @since 0.2.0
-$colour-nice-grey-1: #adadad;
+$nds-colour-nice-grey-1: #adadad;
 
 /// Grey 2. Part of the secondary palette.
 /// @since 0.2.0
-$colour-nice-grey-2: #d6d6d6;
+$nds-colour-nice-grey-2: #d6d6d6;
 
 /// Grey 3. Part of the secondary palette.
 /// @since 0.2.0
-$colour-nice-grey-3: #e9e9e9;
+$nds-colour-nice-grey-3: #e9e9e9;
 
 // TERTIARY PALETTE
 
 /// Blue 1. Part of the tertiary palette.
 /// @since 0.2.0
-$colour-nice-blue-1: #233746;
+$nds-colour-nice-blue-1: #233746;
 
 /// Blue 2. Part of the tertiary palette.
 /// @since 0.2.0
-$colour-nice-blue-2: #314c60;
+$nds-colour-nice-blue-2: #314c60;
 
 /// Blue 3. Part of the tertiary palette.
 /// @since 0.2.0
-$colour-nice-blue-3: #517489;
+$nds-colour-nice-blue-3: #517489;
 
 /// Ice Teal. Part of the tertiary palette.
 /// @since 0.2.0
-$colour-nice-ice-teal: #a2bdc1;
+$nds-colour-nice-ice-teal: #a2bdc1;
 
 /// Teal 1. Part of the tertiary palette.
 /// @since 0.2.0
-$colour-nice-teal-1: #4f7d83;
+$nds-colour-nice-teal-1: #4f7d83;
 
 /// Teal 2. Part of the tertiary palette.
 /// @since 0.2.0
-$colour-nice-teal-2: #18646e;
+$nds-colour-nice-teal-2: #18646e;
 
 /// Teal 3. Part of the tertiary palette.
 /// @since 0.2.0
-$colour-nice-teal-3: #15434a;
+$nds-colour-nice-teal-3: #15434a;
