--- a/packages/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/packages/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -6,11 +6,11 @@
 
 /// True black, used for print styles
 /// @since 0.2.0
-$colour-true-black: #000;
+$nds-colour-true-black: #000;
 
 /// True white, used for print styles
 /// @since 0.2.0
-$colour-true-white: #fff;
+$nds-colour-true-white: #fff;
 
 // GLOBAL
 
@@ -20,224 +20,224 @@ $colour-true-white: #fff;
 /// reducing contrast. See https://ux.stackexchange.com/a/73918/92081
 /// for a more detailed explanation.
 /// @since 0.2.0
-$colour-body: #f4f4f4;
+$nds-colour-body: #f4f4f4;
 
 /// Standard, primary body text colour. Off-black, to slightly reduce
 /// contrast in an attempt to make text easier to read for those with
-/// 'visual stress', see also $colour-body.
+/// 'visual stress', see also $nds-colour-body.
 /// @since 0.2.0
-$colour-text: $colour-nice-black;
+$nds-colour-text: $nds-colour-nice-black;
 
 /// Subtle text colour
 /// @since 0.2.0
-$colour-text-subtle: $colour-nice-grey-1;
+$nds-colour-text-subtle: $nds-colour-nice-grey-1;
 
 /// Inverse body text colour for use on dark background
 /// @since 0.2.2
-$colour-text-inverse: $colour-nice-white;
+$nds-colour-text-inverse: $nds-colour-nice-white;
 
 /// Icons colour
 /// @since 0.2.0
-$colour-icons: $colour-nice-teal;
+$nds-colour-icons: $nds-colour-nice-teal;
 
 // LINKS
 
 /// Link text colour
 /// @since 0.2.0
-$colour-link: #005ea5;
+$nds-colour-link: #005ea5;
 
 /// Link hover colour
 /// @since 0.2.0
-$colour-link-hover: #2e8aca;
+$nds-colour-link-hover: #2e8aca;
 
 /// Link visited colour
 /// @since 0.2.0
-$colour-link-visited: #4c2c92;
+$nds-colour-link-visited: #4c2c92;
 
 /// Link active colour
 /// @since 0.2.0
-$colour-link-active: $colour-text;
+$nds-colour-link-active: $nds-colour-text;
 
 /// Link focus text colour
 /// @since 0.2.11
-$colour-link-focus-text: $colour-link;
+$nds-colour-link-focus-text: $nds-colour-link;
 
 // INVERSE LINKS
 
 /// Inverse link text colour
 /// @since 0.2.9
-$colour-link-inverse: $colour-text-inverse;
+$nds-colour-link-inverse: $nds-colour-text-inverse;
 
 /// Inverse link hover text colour
 /// @since 0.2.9
-$colour-link-inverse-hover: $colour-nice-grey-2;
+$nds-colour-link-inverse-hover: $nds-colour-nice-grey-2;
 
 /// Inverse link visited text colour. Same as normal inverse link colour to ensure minimum 4.5:1 colour contrast across various dark backgrounds.
 /// @since 0.2.9
-$colour-link-inverse-visited: $colour-link-inverse;
+$nds-colour-link-inverse-visited: $nds-colour-link-inverse;
 
 /// Inverse link active text colour
 /// @since 0.2.9
-$colour-link-inverse-active: $colour-link-inverse-hover;
+$nds-colour-link-inverse-active: $nds-colour-link-inverse-hover;
 
 /// Inverse link focus text colour
 /// @since 0.2.9
-$colour-link-inverse-focus-text: $colour-link-inverse;
+$nds-colour-link-inverse-focus-text: $nds-colour-link-inverse;
 
 // FOCUS
 
 /// Focus colour
 /// @since 0.2.0
-$colour-focus: #0092a6;
+$nds-colour-focus: #0092a6;
 
 /// Focus colour
 /// @since 0.3.1
-$colour-focus-inverse: $colour-link-inverse;
+$nds-colour-focus-inverse: $nds-colour-link-inverse;
 
 // CTA BUTTONS
 
 /// CTA button background colour
 /// @since 0.2.2
-$colour-btn-cta: $colour-nice-purple;
+$nds-colour-btn-cta: $nds-colour-nice-purple;
 
 /// CTA button hover colour
 /// @since 0.2.2
-$colour-btn-cta-hover: #260b2d;
+$nds-colour-btn-cta-hover: #260b2d;
 
 /// CTA button text colour
 /// @since 0.2.2
-$colour-btn-cta-text: $colour-nice-white;
+$nds-colour-btn-cta-text: $nds-colour-nice-white;
 
 // PRIMARY BUTTONS
 
 /// Primary button background colour
 /// @since 0.2.2
-$colour-btn-primary: $colour-nice-dark-grey;
+$nds-colour-btn-primary: $nds-colour-nice-dark-grey;
 
 /// Primary button hover colour
 /// @since 0.2.2
-$colour-btn-primary-hover: $colour-nice-rich-black;
+$nds-colour-btn-primary-hover: $nds-colour-nice-rich-black;
 
 /// Primary button text colour
 /// @since 0.2.2
-$colour-btn-primary-text: $colour-nice-white;
+$nds-colour-btn-primary-text: $nds-colour-nice-white;
 
 // SECONDARY BUTTONS
 
 /// Secondary button background colour
 /// @since 0.2.2
-$colour-btn-secondary: #666;
+$nds-colour-btn-secondary: #666;
 
 /// Secondary button hover colour
 /// @since 0.2.2
-$colour-btn-secondary-hover: #333;
+$nds-colour-btn-secondary-hover: #333;
 
 /// Primary button text colour
 /// @since 0.2.2
-$colour-btn-secondary-text: $colour-nice-white;
+$nds-colour-btn-secondary-text: $nds-colour-nice-white;
 
 // LIGHT BUTTONS
 
 /// Inverse (light) button background colour
 /// @since 0.2.2
-$colour-btn-inverse: $colour-nice-white;
+$nds-colour-btn-inverse: $nds-colour-nice-white;
 
 /// Inverse (light) button hover colour
 /// @since 0.2.2
-$colour-btn-inverse-hover: $colour-nice-grey-3;
+$nds-colour-btn-inverse-hover: $nds-colour-nice-grey-3;
 
 /// Inverse (light) button text colour
 /// @since 0.2.2
-$colour-btn-inverse-text: $colour-nice-rich-black;
+$nds-colour-btn-inverse-text: $nds-colour-nice-rich-black;
 
 // BACKGROUNDS/BORDERS
 
 /// Borders, separators, rules, keylines etc.
 /// @since 0.2.0
-$colour-border: $colour-nice-grey-1;
+$nds-colour-border: $nds-colour-nice-grey-1;
 
 /// Focused Borders, separators, rules, keylines etc.
 /// @since 0.4.2
-$colour-border-focus: $colour-nice-blue-3;
+$nds-colour-border-focus: $nds-colour-nice-blue-3;
 
 // NOTIFICATIONS/BANNERS
 
 /// Agile lifecycle phase banner
 /// @since 0.2.2
-$colour-agile-phase: #009ae9;
+$nds-colour-agile-phase: #009ae9;
 
 /// Discovery agile lifecycle phase
 /// @since 0.2.0
-/// @deprecated Use $colour-agile-phase instead
-$colour-discovery: #b8008e;
+/// @deprecated Use $nds-colour-agile-phase instead
+$nds-colour-discovery: #b8008e;
 
 /// Alpha badges and banners
 /// @since 0.2.0
-/// @deprecated Use $colour-agile-phase instead
-$colour-alpha: #d5367f;
+/// @deprecated Use $nds-colour-agile-phase instead
+$nds-colour-alpha: #d5367f;
 
 /// Beta badges and banners
 /// @since 0.2.0
-/// @deprecated Use $colour-agile-phase instead
-$colour-beta: #f47738;
+/// @deprecated Use $nds-colour-agile-phase instead
+$nds-colour-beta: #f47738;
 
 /// Live badges and banners
 /// @since 0.2.0
-/// @deprecated Use $colour-agile-phase instead
-$colour-live: #70a747;
+/// @deprecated Use $nds-colour-agile-phase instead
+$nds-colour-live: #70a747;
 
 /// Error text and border colour
 /// @since 0.2.0
-$colour-error: #ae0e1e;
+$nds-colour-error: #ae0e1e;
 
 /// Error background colour
 /// @since 0.2.0
-$colour-error-background: #eac3c3;
+$nds-colour-error-background: #eac3c3;
 
 /// Caution text and border colour
 /// @since 0.2.0
-$colour-caution: #9b722f;
+$nds-colour-caution: #9b722f;
 
 /// Caution background colour
 /// @since 0.2.0
-$colour-caution-background: #ffdfa4;
+$nds-colour-caution-background: #ffdfa4;
 
 /// Info text and border colour
 /// @since 0.2.0
-$colour-info: #4a7f99;
+$nds-colour-info: #4a7f99;
 
 /// Info background colour
 /// @since 0.2.0
-$colour-info-background: #e6faff;
+$nds-colour-info-background: #e6faff;
 
 /// Success text and border colour
 /// @since 0.2.0
-$colour-success: #3f8c5e;
+$nds-colour-success: #3f8c5e;
 
 /// Success background colour
 /// @since 0.2.0
-$colour-success-background: #eff7eb;
+$nds-colour-success-background: #eff7eb;
 
 // GUIDANCE TYPES
 
 /// New guidance colour
 /// @since 0.3.0
-$colour-guidance-new: $colour-nice-purple;
+$nds-colour-guidance-new: $nds-colour-nice-purple;
 
 /// Updated guidance colour
 /// @since 0.3.0
-$colour-guidance-updated: $colour-nice-blue-3;
+$nds-colour-guidance-updated: $nds-colour-nice-blue-3;
 
 /// In consultation guidance colour
 /// @since 0.3.0
-$colour-guidance-consultation: #557021;
+$nds-colour-guidance-consultation: #557021;
 
 // HERO
 
 /// Background colour for the hero component
 /// @since 0.5.2
-$colour-hero-background: $colour-nice-teal-2;
+$nds-colour-hero-background: $nds-colour-nice-teal-2;
 
 /// Colour for the border in the hero component
 /// @since 0.5.2
-$colour-hero-border: $colour-nice-teal-3;
+$nds-colour-hero-border: $nds-colour-nice-teal-3;
