--- a/packages/nds-core/scss/settings/_settings-spacing.scss
+++ b/packages/nds-core/scss/settings/_settings-spacing.scss
@@ -4,40 +4,40 @@
 
 /// Extra extra small spacing
 /// @since 0.2.0
-$spacing-xx-small: 2;
+$nds-spacing-xx-small: 2;
 
 /// Extra small spacing
 /// @since 0.2.0
-$spacing-x-small: 4;
+$nds-spacing-x-small: 4;
 
 /// Small spacing
 /// @since 0.2.0
-$spacing-small: 8;
+$nds-spacing-small: 8;
 
 /// Medium spacing
 /// @since 0.2.0
-$spacing-medium: 16;
+$nds-spacing-medium: 16;
 
 /// Large spacing
 /// @since 0.2.0
-$spacing-large: 32;
+$nds-spacing-large: 32;
 
 /// Extra large spacing
 /// @since 0.2.0
-$spacing-x-large: 48;
+$nds-spacing-x-large: 48;
 
 /// Extra extra large spacing
 /// @since 0.2.0
-$spacing-xx-large: 64;
+$nds-spacing-xx-large: 64;
 
 /// A map of spacing values
 /// @since 0.2.15
-$spacings: (
-  xx-small: $spacing-xx-small,
-  x-small: $spacing-x-small,
-  small: $spacing-small,
-  medium: $spacing-medium,
-  large: $spacing-large,
-  x-large: $spacing-x-large,
-  xx-large: $spacing-xx-large
+$nds-spacings: (
+  xx-small: $nds-spacing-xx-small,
+  x-small: $nds-spacing-x-small,
+  small: $nds-spacing-small,
+  medium: $nds-spacing-medium,
+  large: $nds-spacing-large,
+  x-large: $nds-spacing-x-large,
+  xx-large: $nds-spacing-xx-large
 );
