--- a/packages/nds-core/scss/settings/_settings-typography.scss
+++ b/packages/nds-core/scss/settings/_settings-typography.scss
@@ -1,26 +1,26 @@
 /// Baseline, in pixels
 /// @since 0.2.0
-$nice-baseline: 4 !default;
+$nds-baseline: 4 !default;
 
 /// Base font size, in pixels
 /// @since 0.2.0
-$nice-base-font-size: $nice-baseline * 4 !default;
+$nds-base-font-size: $nds-baseline * 4 !default;
 
 /// Base line height, in pixels
 /// @since 0.2.0
-$nice-base-line-height: $nice-baseline * 6 !default;
+$nds-base-line-height: $nds-baseline * 6 !default;
 
 /// Sans-serif font stack
 /// @since 0.2.0
-$nice-font-family-sans: '"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif' !default;
+$nds-font-family-sans: '"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif' !default;
 
 /// Serif font stack
 /// @since 0.2.0
-$nice-font-family-serif: 'Georgia, "Times New Roman", Times, serif' !default;
+$nds-font-family-serif: 'Georgia, "Times New Roman", Times, serif' !default;
 
 /// Mono font stack
 /// @since 0.2.0
-$nice-font-family-mono: 'Monaco, Menlo, Consolas, "Courier New", monospace' !default;
+$nds-font-family-mono: 'Monaco, Menlo, Consolas, "Courier New", monospace' !default;
 
 /// The font families in use across NICE.
 /// @prop {Font stack} sans [Lato, Helvetica Neue, Helvetica, Arial, sans-serif] The sans-serif font stack
@@ -28,33 +28,33 @@ $nice-font-family-mono: 'Monaco, Menlo, Consolas, "Courier New", monospace' !def
 /// @prop {Font stack} mono [Monaco, Menlo, Consolas, "Courier New", monospace] The monospace font stack
 /// @see font-family
 /// @since 0.2.0
-$nice-font-families: (
-  sans: $nice-font-family-sans,
-  serif: $nice-font-family-serif,
-  mono: $nice-font-family-mono
+$nds-font-families: (
+  sans: $nds-font-family-sans,
+  serif: $nds-font-family-serif,
+  mono: $nds-font-family-mono
 ) !default;
 
 /// The modular scale ratio to use for typography
 /// @since 0.2.0
-$nice-type-ratio: get-ratio(fourth) !default;
+$nds-type-ratio: nds-get-ratio(fourth) !default;
 
 /// The minimum root font size, in pixels
 /// @since 0.2.13
-$nice-root-font-size-min: 15;
+$nds-root-font-size-min: 15;
 
-/// The maximum root font size, used from breakpoint `$nice-root-font-size-max-breakpoint`
+/// The maximum root font size, used from breakpoint `$nds-root-font-size-max-breakpoint`
 /// @since 0.2.13
-$nice-root-font-size-max: 18;
+$nds-root-font-size-max: 18;
 
 /// The breakpoint at which the root font size starts changing from minimum
 /// towards maximum.
 /// @since 0.2.13
-$nice-root-font-size-min-breakpoint: $nice-breakpoint-md;
+$nds-root-font-size-min-breakpoint: $nds-breakpoint-md;
 
 /// The breakpoint at which the root font size stops changing and is at its maximum
 /// towards maximum.
 /// @since 0.2.13
-$nice-root-font-size-max-breakpoint: $nice-breakpoint-lg;
+$nds-root-font-size-max-breakpoint: $nds-breakpoint-lg;
 
 /// A map of named font sizes to their corresponding modular scale factor
 /// @prop {Integer} h1 [5] Heading 1
@@ -66,7 +66,7 @@ $nice-root-font-size-max-breakpoint: $nice-breakpoint-lg;
 /// @prop {Integer} lead [2] Lead
 /// @prop {Integer} p [0] Paragraph
 /// @since 0.1.0
-$named-font-sizes: (
+$nds-named-font-sizes: (
   h1: 5,
   h2: 4,
   h3: 3,
@@ -79,59 +79,59 @@ $named-font-sizes: (
 
 /// Numeric font sizes
 /// @since 0.2.0
-$font-sizes: (
+$nds-font-sizes: (
   -2: (
       fs: 12,
       lh: 18,
-      mb: $spacing-small,
-      mt: $spacing-small
+      mb: $nds-spacing-small,
+      mt: $nds-spacing-small
     ),
   -1: (
       fs: 14,
       lh: 20,
-      mb: $spacing-medium,
-      mt: $spacing-medium
+      mb: $nds-spacing-medium,
+      mt: $nds-spacing-medium
     ),
   0: (
     fs: 16,
     lh: 24,
-    mb: $spacing-medium,
-    mt: $spacing-medium
+    mb: $nds-spacing-medium,
+    mt: $nds-spacing-medium
   ),
   1: (
     fs: 18,
     lh: 24,
-    mb: $spacing-medium,
-    mt: $spacing-medium
+    mb: $nds-spacing-medium,
+    mt: $nds-spacing-medium
   ),
   2: (
     fs: 20,
     lh: 28,
-    mb: $spacing-medium,
-    mt: $spacing-medium
+    mb: $nds-spacing-medium,
+    mt: $nds-spacing-medium
   ),
   3: (
     fs: 28,
     lh: 32,
-    mb: $spacing-medium,
-    mt: $spacing-large
+    mb: $nds-spacing-medium,
+    mt: $nds-spacing-large
   ),
   4: (
     fs: 36,
     lh: 40,
-    mb: $spacing-medium,
-    mt: $spacing-large
+    mb: $nds-spacing-medium,
+    mt: $nds-spacing-large
   ),
   5: (
     fs: 44,
     lh: 56,
-    mb: $spacing-medium,
+    mb: $nds-spacing-medium,
     mt: 0
   ),
   6: (
     fs: 52,
     lh: 60,
-    mb: $spacing-large,
+    mb: $nds-spacing-large,
     mt: 0
   )
 );
