--- a/packages/nds-core/scss/typography/_typography-links.scss
+++ b/packages/nds-core/scss/typography/_typography-links.scss
@@ -4,69 +4,69 @@
 
 /// Default link style for use on a normal (light) background
 /// @since 0.3.1
-@mixin link-default {
-  color: $colour-link;
-  -webkit-tap-highlight-color: rgba($colour-focus, 0.333);
+@mixin nds-link-default {
+  color: $nds-colour-link;
+  -webkit-tap-highlight-color: rgba($nds-colour-focus, 0.333);
   text-decoration: underline;
   text-decoration-skip-ink: auto;
 
   &:visited {
-    color: $colour-link-visited;
+    color: $nds-colour-link-visited;
   }
 
   &:hover {
-    color: $colour-link-hover;
+    color: $nds-colour-link-hover;
   }
 
   &:focus {
-    @include default-focus-style;
-    color: $colour-link-focus-text;
+    @include nds-default-focus-style;
+    color: $nds-colour-link-focus-text;
   }
 
   &:active {
-    color: $colour-link-active;
+    color: $nds-colour-link-active;
   }
 }
 /// Default links for use on a light background
 /// @require {mixin} link-default
 /// @since 0.5.0
-@mixin links-default {
+@mixin nds-links-default {
   a {
-    @include link-default;
+    @include nds-link-default;
   }
 }
 
 /// Inverse link style for use on an inverse (dark) background
 /// @since 0.3.1
-@mixin link-inverse {
-  color: $colour-link-inverse;
-  -webkit-tap-highlight-color: rgba($colour-focus, 0.333);
+@mixin nds-link-inverse {
+  color: $nds-colour-link-inverse;
+  -webkit-tap-highlight-color: rgba($nds-colour-focus, 0.333);
   text-decoration: underline;
   text-decoration-skip-ink: auto;
 
   &:visited {
-    color: $colour-link-inverse-visited;
+    color: $nds-colour-link-inverse-visited;
   }
 
   &:hover {
-    color: $colour-link-inverse-hover;
+    color: $nds-colour-link-inverse-hover;
   }
 
   &:focus {
-    @include inverse-focus-style;
-    color: $colour-link-inverse-focus-text;
+    @include nds-inverse-focus-style;
+    color: $nds-colour-link-inverse-focus-text;
   }
 
   &:active {
-    color: $colour-link-inverse-active;
+    color: $nds-colour-link-inverse-active;
   }
 }
 
 /// Inverse links for use on a dark background
 /// @require {mixin} link-inverse
 /// @since 0.3.1
-@mixin links-inverse {
+@mixin nds-links-inverse {
   a {
-    @include link-inverse;
+    @include nds-link-inverse;
   }
 }
