--- a/packages/nds-form-group/scss/form-group.scss
+++ b/packages/nds-form-group/scss/form-group.scss
@@ -1,30 +1,30 @@
 @import '~@nice-digital/nds-core/scss/core';
 
 .form-group {
-  border: rem(1px) solid $colour-border;
-  margin-bottom: rem($spacing-medium);
-  padding: rem($spacing-small);
+  border: rem(1px) solid $nds-colour-border;
+  margin-bottom: rem($nds-spacing-medium);
+  padding: rem($nds-spacing-small);
 
   &--no-legend {
     border: none;
   }
 
   &__legend {
-    @include font-size(p);
+    @include nds-font-size(p);
     font-weight: bold;
-    margin-left: rem(-$spacing-x-small);
-    padding-left: rem($spacing-x-small);
-    padding-right: rem($spacing-x-small);
+    margin-left: rem(-$nds-spacing-x-small);
+    padding-left: rem($nds-spacing-x-small);
+    padding-right: rem($nds-spacing-x-small);
   }
 
   &__hint {
-    color: $colour-nice-dark-grey;
-    margin-top: rem($spacing-x-small);
+    color: $nds-colour-nice-dark-grey;
+    margin-top: rem($nds-spacing-x-small);
   }
 
   &__error-message {
-    color: $colour-error;
+    color: $nds-colour-error;
     font-weight: bold;
-    margin-top: rem($spacing-x-small);
+    margin-top: rem($nds-spacing-x-small);
   }
 }
