--- a/packages/nds-in-page-nav/scss/in-page-nav.scss
+++ b/packages/nds-in-page-nav/scss/in-page-nav.scss
@@ -6,18 +6,18 @@
 
 /// In page nav
 .in-page-nav {
-  margin: rem(0 0 $spacing-large);
+  margin: rem(0 0 $nds-spacing-large);
 
   // The 'on this page' title
   &__title {
-    @include font-size(h4);
+    @include nds-font-size(h4);
     margin-top: 0;
   }
 
   // Lists (both root level and sub level)
   &__list {
     list-style: disc;
-    margin-left: em($spacing-medium);
+    margin-left: em($nds-spacing-medium);
 
     .in-page-nav__list {
       list-style: circle;
@@ -30,7 +30,7 @@
 
   a {
     &:visited {
-      color: $colour-link;
+      color: $nds-colour-link;
     }
 
     &:focus {
@@ -47,7 +47,7 @@
       top: 0;
 
       .in-page-nav__title {
-        margin-top: rem($spacing-small);
+        margin-top: rem($nds-spacing-small);
       }
     }
 
