--- a/packages/nds-phase-banner/scss/phase-banner.scss
+++ b/packages/nds-phase-banner/scss/phase-banner.scss
@@ -15,16 +15,16 @@
 /// @see .tag
 /// @since 0.1.0
 .phase-banner {
-  border-bottom: 1px solid $colour-border;
+  border-bottom: 1px solid $nds-colour-border;
   display: table;
-  margin: em(0 0 $spacing-small);
+  margin: em(0 0 $nds-spacing-small);
   max-width: 100%;
-  padding: em($spacing-small 0);
+  padding: em($nds-spacing-small 0);
   width: 100%;
 
   &__tag {
     display: table-cell;
-    padding: em(0 $spacing-small 0 0);
+    padding: em(0 $nds-spacing-small 0 0);
     vertical-align: top;
   }
 
