--- a/packages/nds-radio/scss/radio.scss
+++ b/packages/nds-radio/scss/radio.scss
@@ -1,13 +1,13 @@
 @import '~@nice-digital/nds-core/scss/core';
 
-$radio-base-size: rem($spacing-large);
+$radio-base-size: rem($nds-spacing-large);
 
 .radio {
-  @include clearfix;
+  @include nds-clearfix;
   clear: left;
   display: block;
-  margin-bottom: rem($spacing-small);
-  padding-left: $radio-base-size + rem($spacing-medium);
+  margin-bottom: rem($nds-spacing-small);
+  padding-left: $radio-base-size + rem($nds-spacing-medium);
   position: relative;
 
   &__input {
@@ -31,22 +31,22 @@ $radio-base-size: rem($spacing-large);
 
     &:focus {
       & + label:before {
-        @include default-focus-style(true);
+        @include nds-default-focus-style(true);
       }
     }
   }
 
   &__label {
-    @include font-size(p);
+    @include nds-font-size(p);
     cursor: pointer;
     display: block;
     font-weight: bold;
-    margin-bottom: rem($spacing-x-small);
-    padding: rem($spacing-x-small) 0;
+    margin-bottom: rem($nds-spacing-x-small);
+    padding: rem($nds-spacing-x-small) 0;
 
     &:before {
       // outside circle
-      border: rem($spacing-xx-small) solid $colour-nice-black;
+      border: rem($nds-spacing-xx-small) solid $nds-colour-nice-black;
       border-radius: 50%;
       content: '';
       height: $radio-base-size;
@@ -58,44 +58,44 @@ $radio-base-size: rem($spacing-large);
 
     &:after {
       // center dot
-      background: $colour-nice-black;
+      background: $nds-colour-nice-black;
       border-radius: 50%;
       content: '';
-      height: rem($spacing-medium);
-      left: rem($spacing-small);
+      height: rem($nds-spacing-medium);
+      left: rem($nds-spacing-small);
       opacity: 0;
       position: absolute;
-      top: rem($spacing-small);
-      width: rem($spacing-medium);
+      top: rem($nds-spacing-small);
+      width: rem($nds-spacing-medium);
     }
   }
 
   &__hint {
-    color: $colour-nice-dark-grey;
-    margin-bottom: rem($spacing-small);
-    margin-top: rem($spacing-x-small);
+    color: $nds-colour-nice-dark-grey;
+    margin-bottom: rem($nds-spacing-small);
+    margin-top: rem($nds-spacing-x-small);
   }
 
   &__error-message {
-    color: $colour-error;
+    color: $nds-colour-error;
     font-weight: bold;
   }
 
   &--error .radio__label,
   &--error .radio__label {
-    color: $colour-error;
+    color: $nds-colour-error;
     &:before {
-      @include default-error-style(true);
+      @include nds-default-error-style(true);
     }
   }
 
   &--inline {
     display: inline-block;
-    margin-right: rem($spacing-medium);
+    margin-right: rem($nds-spacing-medium);
     vertical-align: top;
 
     input {
-      margin-right: rem($spacing-x-small);
+      margin-right: rem($nds-spacing-x-small);
     }
   }
 }
