--- a/packages/nds-stacked-nav/scss/stacked-nav.scss
+++ b/packages/nds-stacked-nav/scss/stacked-nav.scss
@@ -8,19 +8,19 @@
 /// Expands to fill the available space.
 /// Usually full width on mobile and 1/3 on wider screens.
 .stacked-nav {
-  background: $colour-nice-white;
-  border: 1px solid $colour-border;
-  margin: em(0 0 $spacing-large);
+  background: $nds-colour-nice-white;
+  border: 1px solid $nds-colour-border;
+  margin: em(0 0 $nds-spacing-large);
 
   // The title nav link
   &__root {
-    @include font-size(h6);
-    border-bottom: 1px solid $colour-border;
+    @include nds-font-size(h6);
+    border-bottom: 1px solid $nds-colour-border;
     font-weight: bold;
     margin: 0;
 
     a {
-      color: $colour-text;
+      color: $nds-colour-text;
     }
   }
 
@@ -31,39 +31,39 @@
   }
 
   &__list-item {
-    border-top: 1px solid $colour-border;
+    border-top: 1px solid $nds-colour-border;
   }
 
   a {
-    color: $colour-link;
+    color: $nds-colour-link;
     display: block;
-    padding: em($spacing-small);
+    padding: em($nds-spacing-small);
     position: relative;
     text-decoration: none;
 
     &[aria-current='page'] {
-      background: $colour-nice-grey-3;
+      background: $nds-colour-nice-grey-3;
       font-weight: bold;
 
       &:before {
-        background: $colour-icons;
+        background: $nds-colour-icons;
         content: '';
         display: block;
         height: 100%;
         left: 0;
         position: absolute;
         top: 0;
-        width: em($spacing-x-small);
+        width: em($nds-spacing-x-small);
       }
     }
 
     &:hover {
-      background: $colour-nice-grey-2;
+      background: $nds-colour-nice-grey-2;
     }
 
     &:active {
-      background: $colour-icons;
-      color: $colour-link-inverse;
+      background: $nds-colour-icons;
+      color: $nds-colour-link-inverse;
     }
   }
 
